applications/vuln-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuln-api
  namespace: applications
  labels:
    app.kubernetes.io/name: vuln-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: vuln-api
