applications/vuln-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vuln-api
  namespace: applications
  annotations:
    cert-manager.io/cluster-issuer: vault-pki-int
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vuln-api.192.168.50.10.nip.io
      secretName: vuln-api-tls
  rules:
    - host: vuln-api.192.168.50.10.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vuln-api
                port:
                  number: 80
